--- a/samples/hello_ar_java/app/src/main/res/layout/activity_main.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_main.xml
@@ -29,10 +29,14 @@
       android:id="@+id/settings_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_alignParentEnd="true"
       android:layout_alignParentTop="true"
-      android:layout_margin="25dp"
-      android:src="@drawable/ic_settings"
-      android:background="@android:color/transparent"/>
+      android:layout_alignParentEnd="true"
+      android:layout_marginStart="25dp"
+      android:layout_marginTop="25dp"
+      android:layout_marginEnd="25dp"
+      android:layout_marginBottom="25dp"
+      android:background="@android:color/transparent"
+      android:contentDescription="cogwheel"
+      android:src="@drawable/ic_settings" />
 
 </RelativeLayout>
