--- a/samples/hello_ar_java/app/src/main/res/layout/activity_main.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_main.xml
@@ -39,4 +39,24 @@
       android:contentDescription="cogwheel"
       android:src="@drawable/ic_settings" />
 
+  <TextView
+      android:id="@+id/textView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentStart="true"
+      android:layout_alignParentTop="true"
+      android:layout_marginStart="15dp"
+      android:layout_marginTop="15dp"
+      android:text="TextView" />
+
+  <Button
+      android:id="@+id/button"
+      android:layout_width="164dp"
+      android:layout_height="70dp"
+      android:layout_alignParentBottom="true"
+      android:layout_centerHorizontal="true"
+      android:layout_marginBottom="49dp"
+      android:onClick="rollDice"
+      android:text="@string/rolling" />
+
 </RelativeLayout>
