Getting it to restart so the dice will reroll

--- a/samples/hello_ar_java/app/src/main/res/layout/activity_main.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
       android:text="TextView" />
 
   <Button
-      android:id="@+id/button"
+      android:id="@+id/buttonroll"
       android:layout_width="164dp"
       android:layout_height="70dp"
       android:layout_alignParentBottom="true"
